[package]
name = "multiemu"
version = "0.1.0"
edition = "2021"

[dependencies]
multiemu_macros = { path = "macros" }
data-encoding = "2.6"
indexmap = { version = "2.6", features = ["serde"] }
bitvec = { git = "https://github.com/ferrilab/ferrilab", default-features = false, features = [
    "std"
] }
nalgebra = { version = "0.33", features = [
    "serde-serialize",
    "convert-bytemuck"
] }
thiserror = "1.0"
arrayvec = "0.7"
# save files/save states
rmp-serde = "1.3"
rmpv = { version = "1.3", features = ["with-serde"] }
num = "0.4"
palette = { version = "0.7", features = ["bytemuck", "serializing"] }
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.11"
serde-inline-default = "0.2"
rand = "0.8"
downcast-rs = "1.2"
rangemap = "1.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
ron = "0.8"
gilrs = { version = "0.11", features = ["serde-serialize"] }
sealed = "0.6"
walkdir = "2.5"
itertools = "0.13"
crossbeam = "0.8"
bytemuck = { version = "1.19", features = ["derive"] }
enumflags2 = "0.7"
dasp = "0.11"
# ui rendering
egui = { version = "0.29", features = ["default_fonts"] }
# rom recognization
sha1 = "0.10"
ringbuffer = "0.15"
strum = { version = "0.26", features = ["derive"] }
# ui image handling
image = { version = "0.25", default-features = false, features = ["webp"] }
# menu audio decoder
lewton = "0.10"

[target.'cfg(all(any(target_family = "unix", target_os = "windows"), not(target_os = "horizon")))'.dependencies]
vulkano = { version = "0.34", default-features = false }
# We are disabling the clipboard support because its causing segfaults on wayland
egui-winit = { version = "0.29", default-features = false, features = [
    "android-game-activity",
    "links",
    "wayland",
    "x11",
] }
winit = { version = "0.30", default-features = false, features = [
    "wayland",
    "wayland-dlopen",
    "x11",
    "rwh_05",
    "rwh_06",
    "android-game-activity",
] }
cpal = "0.15"
dirs = "5.0"
# Cli utility stuff
clap = { version = "4.5", features = ["derive"] }
quick-xml = { version = "0.37", features = ["serialize"] }
softbuffer = "0.4"

# 3ds support
[target.'cfg(target_os = "horizon")'.dependencies]
ctru-rs = { git = "https://github.com/rust3ds/ctru-rs" }

[build-dependencies]
cfg_aliases = "0.2"

[features]

[profile.dev]
# Software rendering is unusable when it comes to ui without this
opt-level = 1 