[package]
name = "multiemu_macros"
version = "0.1.0"
edition = "2021"

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"
syn = { version = "2.0", features = ["full"] }
naga = { version = "22.1", default-features = false, features = [
    "wgsl-in",
    "spv-out"
] }
heck = "0.5"

[lib]
proc-macro = true
